@@ -15,67 +15,67 @@ library tkimg
 # Define the TKIMG interface:
 
 interface tkimg
-#hooks {}
 scspec TKIMGAPI
 
 #########################################################################
 ###  Reading and writing image data from channels and/or strings.
 
-declare 0 generic {
-    Tcl_Channel tkimg_OpenFileChannel (Tcl_Interp *interp,
+declare 0 {
+    Tcl_Channel tkimg_OpenFileChannel(Tcl_Interp *interp,
 	const char *fileName, int permissions)
 }
-declare 1 generic {
-    int tkimg_ReadInit (Tcl_Obj *data, int c, tkimg_MFile *handle)
+declare 1 {
+    int tkimg_ReadInit(Tcl_Obj *data, int c, tkimg_MFile *handle)
 }
-declare 2 generic {
-    void tkimg_WriteInit (Tcl_DString *buffer, tkimg_MFile *handle)
+declare 2 {
+    void tkimg_WriteInit(Tcl_DString *buffer, tkimg_MFile *handle)
 }
-declare 3 generic {
-    int tkimg_Getc (tkimg_MFile *handle)
+declare 3 {
+    int tkimg_Getc(tkimg_MFile *handle)
 }
-declare 4 generic {
-    int tkimg_Read (tkimg_MFile *handle, char *dst, int count)
+declare 4 {
+    int tkimg_Read(tkimg_MFile *handle, char *dst, int count)
 }
-declare 5 generic {
-    int tkimg_Putc (int c, tkimg_MFile *handle)
+declare 5 {
+    int tkimg_Putc(int c, tkimg_MFile *handle)
 }
-declare 6 generic {
-    int tkimg_Write (tkimg_MFile *handle, const char *src, int count)
+declare 6 {
+    int tkimg_Write(tkimg_MFile *handle, const char *src, int count)
 }
-declare 7 generic {
-    void tkimg_ReadBuffer (int onOff)
+declare 7 {
+    void tkimg_ReadBuffer(int onOff)
 }
 
 #########################################################################
 ###  Specialized put block handling transparency
 
-declare 10 generic {
-    int tkimg_PhotoPutBlock (Tcl_Interp *interp, Tk_PhotoHandle handle,
+declare 10 {
+    int tkimg_PhotoPutBlock(Tcl_Interp *interp, Tk_PhotoHandle handle,
 	Tk_PhotoImageBlock *blockPtr, int x, int y, int width, int height, int flags)
 }
-declare 11 generic {
-    int tkimg_PhotoExpand (Tcl_Interp *interp, Tk_PhotoHandle handle,
+declare 11 {
+    int tkimg_PhotoExpand(Tcl_Interp *interp, Tk_PhotoHandle handle,
 	int width, int height)
 }
-declare 12 generic {
-    int tkimg_PhotoSetSize (Tcl_Interp *interp, Tk_PhotoHandle handle,
+declare 12 {
+    int tkimg_PhotoSetSize(Tcl_Interp *interp, Tk_PhotoHandle handle,
 	int width, int height)
 }
 
 #########################################################################
-###  Utilities to help handling the differences in 8.3.2 and 8.3 image types.
+###  Utilities to help handling the differences in 8.3.2 and 8.2 image
+###  types. Not used any more.
 
-declare 20 generic {
-    void tkimg_FixChanMatchProc (Tcl_Interp **interp, Tcl_Channel *chan,
+declare 20 {
+    void tkimg_FixChanMatchProc(Tcl_Interp **interp, Tcl_Channel *chan,
 	const char **file, Tcl_Obj **format, int **width, int **height)
 }
-declare 21 generic {
-    void tkimg_FixObjMatchProc (Tcl_Interp **interp, Tcl_Obj **data,
+declare 21 {
+    void tkimg_FixObjMatchProc(Tcl_Interp **interp, Tcl_Obj **data,
 	Tcl_Obj **format, int **width, int **height)
 }
-declare 22 generic {
-    void tkimg_FixStringWriteProc (Tcl_DString *data, Tcl_Interp **interp,
+declare 22 {
+    void tkimg_FixStringWriteProc(Tcl_DString *data, Tcl_Interp **interp,
 	Tcl_DString **dataPtr, Tcl_Obj **format, Tk_PhotoImageBlock **blockPtr)
 }
 
@@ -83,14 +83,14 @@ declare 22 generic {
 ###  Like the core functions, except that they accept objPtr == NULL.
 ###  The byte array function also handles both UTF and non-UTF cores.
 
-declare 30 generic {
-    const char *tkimg_GetStringFromObj (Tcl_Obj *objPtr, int *lengthPtr)
+declare 30 {
+    const char *tkimg_GetStringFromObj(Tcl_Obj *objPtr, int *lengthPtr)
 }
-declare 31 generic {
-    unsigned char *tkimg_GetByteArrayFromObj (Tcl_Obj *objPtr, int *lengthPtr)
+declare 31 {
+    unsigned char *tkimg_GetByteArrayFromObj(Tcl_Obj *objPtr, int *lengthPtr)
 }
-declare 32 generic {
-    int tkimg_ListObjGetElements (Tcl_Interp *interp, Tcl_Obj *objPtr, int *argc, Tcl_Obj ***argv)
+declare 32 {
+    int tkimg_ListObjGetElements(Tcl_Interp *interp, Tcl_Obj *objPtr, int *argc, Tcl_Obj ***argv)
 }
 
 #########################################################################
